# balanced-binary-WOA

./: AZURE.md  CODECARBON.md  README.md  pyproject.toml
data/results/merged/: balanced_woa_codecarbon.csv  balanced_woa_results.csv  filter_based.csv  filter_based_codecarbon.csv  genetic_algorithm.csv  genetic_algorithm_codecarbon.csv  lower_bound.csv  lower_bound_codecarbon.csv  random_search.csv  random_search_codecarbon.csv  random_search_results.csv  upper_bound.csv  upper_bound_results.csv  vanilla_woa.csv
data/results/raw/: balanced_woa_sigmoid_transition_codecarbon.csv  balanced_woa_sigmoid_transition_results.csv  balanced_woa_tanh_transition_codecarbon.csv  balanced_woa_tanh_transition_results.csv  filter_based_results.csv  genetic_algorithm_results.csv  lower_bound_results.csv  random_search_1500_catch22_codecarbon.csv  random_search_1500_catch22_results.csv  random_search_1500_tsfel_codecarbon.csv  random_search_1500_tsfel_results.csv  random_search_codecarbon.csv  (+4 more)
notebooks/: 01-temperature-decay-functions.ipynb  02-point-sampling-functions.ipynb  03-exploration-visualization.ipynb  04-experiments-results.ipynb  05-ablation-study.ipynb
scenarios/: balanced_woa.py  filter_based.py  genetic_algorithm.py  lower_bound.py  random_search.py  upper_bound.py  vanilla_woa.py
scripts/: codecarbon_check.py  merge_results.py  polcom_extract_features.py
src/: config.py  utils.py
src/features/: benchmarks.py  extraction.py  utils.py
src/woa/: algorithm.py  domain.py  initialize.py  objective.py  scaling.py  scenario.py  temperature.py  transition.py
